Adds experimental EA release support to Travis build