@@ -522,5 +522,41 @@
                 </plugins>
             </build>
         </profile>
+
+        <profile>
+            <id>experimental-support-for-EA-version</id>
+            
+            <properties>
+                <!-- Byte Buddy often supports new class file versions for current EA releases if its experimental flag is set to true -->
+                <surefire.argLine>--illegal-access=deny -Dnet.bytebuddy.experimental=true</surefire.argLine>
+            </properties>
+            
+            <build>
+                <plugins>
+                    <!-- These plugins often lag behind a little when it comes to supporting new class file versions -->
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>com.github.spotbugs</groupId>
+                        <artifactId>spotbugs-maven-plugin</artifactId>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
